# claude-code-visibility

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_dashboard/: __init__.py  __main__.py  app.py  cli.py  config.py
src/claude_dashboard/components/: charts.py  filters.py  kpi_cards.py
src/claude_dashboard/data/: facets.py  history.py  loader.py  session_meta.py  stats_cache.py  transcript_security.py  transcripts.py
src/claude_dashboard/pages/: overview.py  productivity.py  projects.py  security.py  sessions.py  tokens_cost.py  tool_usage.py
