[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-visibility"
version = "0.1.1"
description = "Comprehensive Streamlit dashboard for Claude Code usage analytics — tokens, costs, tools, sessions, and productivity insights"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aditya Samalla"},
]
keywords = [
    "claude", "claude-code", "dashboard", "analytics", "streamlit",
    "developer-tools", "productivity", "token-usage", "cost-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/AdityaRon/claude-code-visibility"
Repository = "https://github.com/AdityaRon/claude-code-visibility"
Issues = "https://github.com/AdityaRon/claude-code-visibility/issues"

[project.scripts]
claude-dashboard = "claude_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dashboard"]
